--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,20 @@
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
+
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter</artifactId>
+                <artifactId>spring-boot-dependencies</artifactId>
                 <version>2.6.3</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
 
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-web</artifactId>
-                <version>2.6.3</version>
             </dependency>
 
             <dependency>
@@ -45,7 +47,6 @@
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
-                <version>2.6.3</version>
             </dependency>
 
             <dependency>
@@ -58,15 +59,23 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.26</version>
+                <scope>provided</scope>
+            </dependency>
+
+            <!-- 集成redis依赖  -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-redis</artifactId>
             </dependency>
 
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
                 <version>5.1.47</version>
+                <scope>runtime</scope>
             </dependency>
 
         </dependencies>
     </dependencyManagement>
-    
+
 </project>
